--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/html" href="style.css">
+
 </head>
 
 <body>
     <app-root></app-root>
+    <script src="https://kit.fontawesome.com/af5df58029.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
